extends Control

func _on_level_1_btn_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/intro_cutscene.tscn")


func _on_level_2_btn_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/level_2_cutscene.tscn")


func _on_level_3_btn_pressed() -> void:
	#LEVEL 3
	pass # Replace with function body.


func _on_level_4_btn_pressed() -> void:
	pass # Replace with function body.


func _on_level_5_btn_pressed() -> void:
	pass # Replace with function body.


func _on_level_6_btn_pressed() -> void:
	pass # Replace with function body.
